Some design improve

--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -56,6 +56,7 @@ $sprite2x: sprite-map("sprite@2x/*.png");
 @import "all-supports";
 @import "form";
 @import "editor";
+@import "pygments";
 
 // Fluid layout
 @import "mobile";
