--- a/templates/forum/cat_details.html
+++ b/templates/forum/cat_details.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block headline %}
-    {{ category.title }}
+    <h1>{{ category.title }}</h1>
 {% endblock %}
 
 {% block breadcrumb %}
