--- a/templates/forum/details.html
+++ b/templates/forum/details.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block headline %}
-    {{ forum.title }}
+    <h1>{{ forum.title }}</h1>
 {% endblock %}
 
 {% block headline-sub %}
