--- a/templates/forum/index.html
+++ b/templates/forum/index.html
@@ -24,7 +24,7 @@
 {% endblock %}
 
 {% block headline %}
-   Liste des forums
+   <h1>Liste des forums</h1>
 {% endblock %}
 
 {% block breadcrumb %}
