--- a/templates/article/validation.html
+++ b/templates/article/validation.html
@@ -11,7 +11,7 @@ Liste des articles soumis en validation
 
 
 {% block headline %}
-Liste des Articles soumis en validation
+<h1>Liste des Articles soumis en validation</h1>
 {% endblock %}
 
 {% block breadcrumb %}
@@ -20,7 +20,7 @@ Liste des Articles soumis en validation
 
 {% block headline-actions %}
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
-        <h3>Actions</h3>
+        <h3>Navigation</h3>
         <ul>
             <li><a href="{% url "zds.article.views.list_validation" %}">Zone de validation</a></li>
             <li><a href="{% url "zds.article.views.list_validation" %}?type=reserved">En cours de validation</a></li>
