--- a/templates/forum/forums_common.part.html
+++ b/templates/forum/forums_common.part.html
@@ -6,11 +6,9 @@
 <div class="row">
 {% for forum in category.get_forums %}
 {% if forum|readable:user %}
-<div class="forum-entry">
+<div class="content-wrapper">
     <div class="forum-entry-title {% if user.is_authenticated and not forum.is_read %}unread{% endif %}">
-        <a href="{{ forum.get_absolute_url }}">
-            {{ forum.title }}
-        </a>
+        <h3 class="subtitle"><a href="{{ forum.get_absolute_url }}">{{ forum.title }}</a></h3>
         <p>
             {{ forum.subtitle }}
         </p>
