--- a/templates/member/profile.html
+++ b/templates/member/profile.html
@@ -9,7 +9,32 @@
 {% endblock %}
 
 {% block headline %}
-    {{ usr.username }}
+    <h1 class="illu">
+        <img src="{{ profile.get_avatar_url }}" alt="Avatar"/>
+        {{ usr.username }}
+    </h1>
+    <ul class="taglist">
+        {% if perms.member.show_ip %}
+        <li>
+            <a href="#">{{ profile.last_ip_address }}</a>
+        </li>
+        <li>
+            <a href="#">{{ profile.get_city }}</a>
+        </li>
+        {% endif %}
+        {% if profile.site %}
+            <li><a href="{{ profile.site }}">{{ profile.site }}</a></li>
+        {% endif %}
+    </ul>
+    
+    <div class="authors content-wrapper">
+        Inscrit {{ usr.date_joined|humane_date }}, dernière connexion {{ usr.last_login|humane_date }}.
+    </div>
+    {% if profile.show_email and user.is_authenticated %}
+    <div class="authors content-wrapper">
+            Adresse mail : {{ usr.email|obfuscate_mailto }}<br />
+    </div>
+    {% endif %}
 {% endblock %}
 
 {% block breadcrumb %}
@@ -17,52 +42,30 @@
 {% endblock %}
 
 {% block headline-actions %}
-    {% ifequal profile.user user %}
-        <a href="{% url "zds.member.views.settings_profile" %}" class="button">
-            <i class="icon-cog"></i>
-            Paramètres
-        </a>
-    {% endifequal %}
-    {% if user.is_authenticated %}
-        <a href="{% url "zds.mp.views.new"%}?username={{ usr.username }}" class="fi-mail button">Message privé</a>
-    {% endif %}
+    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Admin">
+        <h3>Actions</h3>
+        <ul>
+            {% ifequal profile.user user %}
+            <li><a href="{% url "zds.member.views.settings_profile" %}">Paramètres</a></li>
+            {% endifequal %}
+
+            {% if user.is_authenticated %}
+            <li><a href="{% url "zds.mp.views.new"%}?username={{ usr.username }}" class="fi-mail button">Message privé</a></li>
+            {% endif %}
+        </ul>
+    </div>
+
+    
+        
+    
+    
 {% endblock %}
 
 {% block content %}
 
 <div class="row">
-    <div class="large-2 columns">
-            <p>
-            <img src="{{ profile.get_avatar_url }}" alt="Avatar" width="80" height="80" class="th"/>
-            </p>
-            {% if perms.member.show_ip %}
-            <p>
-                {{ profile.last_ip_address }}
-            </p>
-            <p>
-                {{ profile.get_city }}
-            </p>
-            {% endif %}
-    </div>
-    <div class="large-10 columns">
-        <p>
-            {% if profile.show_email and user.is_authenticated %}
-                Adresse mail : {{ usr.email|obfuscate_mailto }}<br />
-            {% endif %}
-
-            {% if profile.site %}
-                Site internet : <a href="{{ profile.site }}">{{ profile.site }}</a><br />
-            {% endif %}
-
-            Inscrit {{ usr.date_joined|humane_date }},
-            dernière connexion {{ usr.last_login|humane_date }}.
-        </p>
-    </div>
-</div>
-
-<div class="row">
     <div class="large-6 columns">
-        <h3>Tutoriels</h3>
+        <h2>Tutoriels</h2>
         <table>
             <tbody>
                 <tr>
@@ -91,7 +94,7 @@
         </table>
     </div>
     <div class="large-6 columns">
-        <h3>Forums</h3>
+        <h2>Forums</h2>
         <table>
             <tbody>
                 <tr>
@@ -109,9 +112,9 @@
 {% if perms.forum.change_topic %}
 <div class="row">
 <div class="large-12 columns">
-        <h3>Modération</h3>
+        <h2>Modération</h2>
         <div class="large-6 columns">
-            <h4>Statistiques</h4>
+            <h3>Statistiques</h3>
             <table>
                 <tbody>
                     <tr>
@@ -128,7 +131,7 @@
         <form action="{% url "zds.member.views.modify_profile" profile.user.pk %}" method="POST"
         class="topic-actions" id="edit_form">
         <div class="large-6 columns">
-            <h4>Sanctions</h4>
+            <h3>Sanctions</h3>
             <div class="row">
                 {% if profile.can_write_now %}
                 <a href="#" class="button secondary small" data-dropdown="ls-drop-{{profile.pk}}">
