--- a/templates/tutorial/index_member.html
+++ b/templates/tutorial/index_member.html
@@ -1,4 +1,5 @@
 {% extends "tutorial/index.html" %}
+{% load humane_date %}
 
 {% block headline-sub-actions %}
     <li><a href="{% url "zds.tutorial.views.import_tuto" %}">Importer</a></li>
