--- a/templates/article/index_member.html
+++ b/templates/article/index_member.html
@@ -1,4 +1,5 @@
 {% extends "article/index.html" %}
+{% load humane_date %}
 
 {% block headline-actions-filter %}
     <h3><span class="wide">Filtres</span></h3>
