--- a/templates/article/index.html
+++ b/templates/article/index.html
@@ -54,7 +54,7 @@
                         <div class="article-infos">
                             <h3>{{ article.title }}</h3>
                             <p class="article-metadata">
-                                crée {{article.create_at|humane_date}}
+                                crée {{article.pubdate|humane_date}}
                             </p>
                         </div>
                     </a>
