--- a/templates/tutorial/new_chapter.html
+++ b/templates/tutorial/new_chapter.html
@@ -6,11 +6,9 @@
 {% endblock %}
 
 {% block headline %}
-    Nouveau chapitre
-{% endblock %}
-
-{% block headline-sub %}
-    {{ part.title }}
+    <h1 class="illu">
+        Nouveau chapitre
+    </h1>
 {% endblock %}
 
 {% block breadcrumb %}
