--- a/templates/tutorial/new_extract.html
+++ b/templates/tutorial/new_extract.html
@@ -6,7 +6,9 @@
 {% endblock %}
 
 {% block headline %}
-    Nouvel extrait
+    <h1 class="illu">
+        Nouvel Extrait
+    </h1>
 {% endblock %}
 
 {% block headline-sub %}
