--- a/templates/tutorial/new_part.html
+++ b/templates/tutorial/new_part.html
@@ -7,7 +7,9 @@
 {% endblock %}
 
 {% block headline %}
-    Nouvelle partie
+    <h1 class="illu">
+        Nouvelle partie
+    </h1>
 {% endblock %}
 
 {% block breadcrumb %}
