--- a/templates/tutorial/new_tutorial.html
+++ b/templates/tutorial/new_tutorial.html
@@ -7,7 +7,9 @@
 {% endblock %}
 
 {% block headline %}
-    Nouveau tutoriel
+    <h1 class="illu">
+        Nouveau Tutoriel
+    </h1>
 {% endblock %}
 
 {% block breadcrumb %}
