--- a/templates/tutorial/base.html
+++ b/templates/tutorial/base.html
@@ -29,7 +29,20 @@
             {% block headline-sub-actions %}{% endblock %}
         </ul>
     </div>
-    {% block headline-actions %}{% endblock %}
-    
+	{% block headline-actions %}{% endblock %}
+    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Télécharger">
+    	<h3><span class="wide">Télécharger</span></h3>
+        <ul class="sidebar-standalone mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Téléchargements">
+            {% if tutorial.on_line %}
+        	{% if perms.tutorial.change_tutorial %}
+        	<li><a href="{% url "zds.tutorial.views.download_markdown" %}?tutoriel={{ tutorial.pk }}">Markdown</a></li>
+        	{% endif %}
+            <li><a href="{% url "zds.tutorial.views.download_html" %}?tutoriel={{ tutorial.pk }}">HTML</a></li>
+            <li><a href="{% url "zds.tutorial.views.download_pdf" %}?tutoriel={{ tutorial.pk }}">PDF</a></li>
+            <li><a href="{% url "zds.tutorial.views.download_epub" %}?tutoriel={{ tutorial.pk }}">EPUB</a></li>
+            {% endif %}
+            <li><a href="{% url "zds.tutorial.views.download" %}?tutoriel={{ tutorial.pk }}">Archive</a></li>
+        </ul>
+    </div>
 </aside>
 {% endblock %}
