--- a/templates/forum/answer.html
+++ b/templates/forum/answer.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block headline %}
-    Répondre au sujet : {{ topic.title }}
+    <h2>Répondre au sujet : {{ topic.title }}</h2>
 {% endblock %}
 
 {% block breadcrumb %}
