--- a/templates/forum/edit_post.html
+++ b/templates/forum/edit_post.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block headline %}
-    Éditer un message : {{ post.topic.title }}
+    <h2>Éditer un message : {{ post.topic.title }}</h2>
 {% endblock %}
 
 {% block breadcrumb %}
