--- a/templates/base.html
+++ b/templates/base.html
@@ -297,7 +297,7 @@
                                                 </li>
                                             {% endif %}
                                         </ul>
-                                        <a href="#" class="dropdown-link-all">
+                                        <a href="{% url "zds.forum.views.followed_topics" %}" class="dropdown-link-all">
                                             Toutes les notifications
                                         </a>
                                     </div>
