Improve Display in gallery

--- a/templates/gallery/edit_image.html
+++ b/templates/gallery/edit_image.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block headline %}
-    Éditer une image
+    <h2>Éditer une image</h2>
 {% endblock %}
 
 {% block breadcrumb %}
