--- a/templates/gallery/gallery_details.html
+++ b/templates/gallery/gallery_details.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block headline %}
-    {{ gallery.title }}
+    <h2>{{ gallery.title }}</h2>
 {% endblock %}
 
 {% block headline-sub %}
