--- a/templates/gallery/gallery_list.html
+++ b/templates/gallery/gallery_list.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block headline %}
-   Liste des galeries
+   <h2>Liste des galeries</h2>
 {% endblock %}
 
 {% block breadcrumb %}
