--- a/templates/gallery/new_gallery.html
+++ b/templates/gallery/new_gallery.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block headline %}
-    Nouvelle galerie
+    <h2>Nouvelle galerie</h2>
 {% endblock %}
 
 {% block breadcrumb %}
