--- a/templates/forum/details.html
+++ b/templates/forum/details.html
@@ -26,14 +26,14 @@
 
 <div class="row">
 {% if sticky_topics %}
-    <div class="forum-entries forum-entries-sticky">
+    <div>
         {% for topic in sticky_topics %}
             {% include "forum/details_row.part.html" %}
         {% endfor %}
     </div>
 {% endif %}
 
-<div class="forum-entries">
+<div>
     {% for topic in topics %}
         {% include "forum/details_row.part.html" %}
     {% endfor %}
