Some font improvements

--- a/assets/css/scss/_base.scss
+++ b/assets/css/scss/_base.scss
@@ -22,7 +22,7 @@ html {
     overflow-x: hidden;
 }
 body {
-    font-family: "Trebuchet MS", Helvetica, "Helvetica Neue", Arial, sans-serif;
+    font-family: "Segoe UI", "Roboto", "Trebuchet MS", Helvetica, "Helvetica Neue", Arial, sans-serif;
     background: #f4f6f6;
     font-size: 14px;
     font-size: 1.4rem;
