--- a/assets/css/scss/_wide.scss
+++ b/assets/css/scss/_wide.scss
@@ -193,8 +193,8 @@
         }
         .search-more {
             width: 30px;
-            height: 30px;
-            line-height: 30px;
+            height: 24px;
+            padding: 3px 0;
         }
     }
 
