--- a/assets/css/scss/_all-supports.scss
+++ b/assets/css/scss/_all-supports.scss
@@ -183,9 +183,10 @@
                 position: relative;
                 text-align: center;
                 line-height: 60px;
-                font-variant: small-caps;
-                font-size: 1.7px;
-                font-size: 1.7rem;
+                text-transform: uppercase;
+                font-size: 1.5px;
+                font-size: 1.5rem;
+                @include text-shadow(rgba(0, 0, 0, 0.75) 0 0 3px);
 
                 &:hover,
                 &:focus,
