--- a/assets/css/scss/_mobile-tablet.scss
+++ b/assets/css/scss/_mobile-tablet.scss
@@ -189,6 +189,9 @@
             &.view:after {
                 @include sprite-pos($sprite2x, 'view-light', true);
             }
+            &.tick:after {
+                @include sprite-pos($sprite2x, 'tick-light', true);
+            }
             &.lock:after {
                 @include sprite-pos($sprite2x, 'lock-light', true);
             }
@@ -201,8 +204,8 @@
             &.arrow-right:after {
                 @include sprite-pos($sprite2x, 'arrow-right-light', true);
             }
-            &.tick:after {
-                @include sprite-pos($sprite2x, 'tick-light', true);
+            &.star:after {
+                @include sprite-pos($sprite2x, 'star-light', true);
             }
         }
     }
